# lindt-home-of-chocolate-bot

./: .gitignore  Dockerfile  README.md  agent.py  conversation.py  entity.py  lindt.txt  main.py  pyproject.toml  redis_client.py  requirements.in  requirements.txt  retriever.py
