[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Rajat Jacob <rajatjacob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.37.2"
chromadb = "^0.4.22"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
